--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
@@ -47,6 +48,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.3.0",
